initial overview shifts

--- a/css/main.css
+++ b/css/main.css
@@ -99,11 +99,11 @@ textarea {
   font-weight: normal;
 }
 /*
-    red: #E73F3F
-    orange: #F76C27
-    yellow: #E7E737
-    blue: #6D9DD1
-    purple: #7E45D3
+    red: #B8580C
+    orange: #0C73B8
+    yellow: #9CC8E5
+    blue: #C7DEED
+    purple: #F9FAFB
 */
 .pure-menu {
     font-weight: lighter;
