--- a/css/main.css
+++ b/css/main.css
@@ -439,3 +439,7 @@ footer {
         page-break-after: avoid;
     }
 }
+
+/* Custom Stuff */
+
+#map { position:absolute; top:0; bottom:0; width:100%; }
